added the first card section

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             </div>
             <div class="nav-button">
                 <button class="orange-btn">Contact</button>
+                <img class="burger-menu" src="assets/menu.png" alt="">
             </div>
         </nav>
 
@@ -41,7 +42,39 @@
         </section>
     </header>
     <main>
-
+        <section class="standard-curriculum-section">
+            <div class="st-cl-title">
+                <h2>Standard Curriculum</h2>
+            </div>
+            <div class="card-container-parent">
+                <div class="sc-cards-container">
+                    <div class="sc-card sc-card1">
+                        <img class="sc-card-image" src="assets/kinder.png" alt="">
+                        <h3 class="sc-card-title">Kinder (3-6) Years</h3>
+                        <p class="sc-card-description">Cum sociis natoque penatibus et magnis
+                            dis parturient montes, nascetur ridiculus
+                            mu sdis parturient</p>
+                        <p class="remo-btn"><a href="">Read More</a></p>
+                    </div>
+                    <div class="sc-card sc-card2">
+                        <img class="sc-card-image" src="assets/elementary.png" alt="">
+                        <h3 class="sc-card-title">Elementary School</h3>
+                        <p class="sc-card-description">Cum sociis natoque penatibus et magnis
+                            dis parturient montes, nascetur ridiculus
+                            mu sdis parturient</p>
+                        <p class="remo-btn"><a href="">Read More</a></p>
+                    </div>
+                    <div class="sc-card sc-card3">
+                        <img class="sc-card-image" src="assets/middle.png" alt="">
+                        <h3 class="sc-card-title">Middle (10-16) Years</h3>
+                        <p class="sc-card-description">Cum sociis natoque penatibus et magnis
+                            dis parturient montes, nascetur ridiculus
+                            mu sdis parturient</p>
+                        <p class="remo-btn"><a href="">Read More</a></p>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
