--- a/index.html
+++ b/index.html
@@ -139,8 +139,39 @@
 
 
     </main>
-    <footer>
+    <footer class="footer">
+        <section class="footer-section">
 
+            <div class="ff-section-container">
+                <div class="f-image-title">
+                    <img src="assets/logo.png" alt="">
+                    <h2>Kids Education</h2>
+                </div>
+                <div class="ff-section-description">
+                    <p>Pizza ipsum dolor meat lovers buffalo. Deep dolor roll melted bacon Bianca pan bacon pineapple Aussie. Mayo rib sauce Hawaiian meatball.</p>
+                </div>
+            </div>
+
+            <div class="fs-section-container">
+                <h3>About School</h3>
+                <ul>
+                    <li><a href="">Home</a></li>
+                    <li><a href="">About</a></li>
+                    <li><a href="">Facilities</a></li>
+                    <li><a href="">Admission</a></li>
+                </ul>
+            </div>
+
+            <div class="ft-section-container">
+                <h3>Keep In Touch</h3>
+                <div class="sm-icons">
+                    <img src="assets/fb.png" alt="">
+                    <img src="assets/dribble.png" alt="">
+                    <img src="assets/twitter.png" alt="">
+                    <img src="assets/google+.png" alt="">
+                </div>
+            </div>
+        </section>
     </footer>
 </body>
 </html>
