--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 
             <div class="ff-section-container">
                 <div class="f-image-title">
-                    <img src="assets/logo.png" alt="">
+                    <img src="assets/logo-white.png" alt="">
                     <h2>Kids Education</h2>
                 </div>
                 <div class="ff-section-description">
@@ -165,10 +165,10 @@
             <div class="ft-section-container">
                 <h3>Keep In Touch</h3>
                 <div class="sm-icons">
-                    <img src="assets/fb.png" alt="">
-                    <img src="assets/dribble.png" alt="">
-                    <img src="assets/twitter.png" alt="">
-                    <img src="assets/google+.png" alt="">
+                    <a href=""><img src="assets/fb.png" alt=""></a>
+                    <a href=""><img src="assets/dribble.png" alt=""></a>
+                    <a href=""><img src="assets/twitter.png" alt=""></a>
+                    <a href=""><img src="assets/google+.png" alt=""></a>
                 </div>
             </div>
         </section>
