did responsive the cariculam card and story card section

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <nav class="navbar">
+        <nav class="navbar hide">
             <div class="logo-site-name">
                 <img class="site-logo" src="assets/logo.png" alt="">
                 <h2 class="site-title">SCHOOL</h2>
@@ -34,7 +34,9 @@
                 <div class="empowering-content">
                     <h1 class="empowering-title"> <span class="empowering-orange">Empowering</span> <br> students from small <br> age <span class="towards-vision-skyblue">towards vision</span></h1>
                     <p class="empowering-description">With the courage, Confidence, Creativity and Compassion to make their Unique Contribution in a Diverse and Dynamic World.</p>
-                    <button class="black-btn">Enroll Now</button>
+                    <div class="black-button-container">
+                        <button class="black-btn">Enroll Now</button>
+                    </div>
                 </div>
                 <div>
                     <img class="hero-kid-img" src="assets/hero-kids.png" alt="A kid wearing superhero mask">
@@ -77,6 +79,7 @@
             </div>
         </section>
 
+        
         <section class="our-story-section">
             <div class="our-story-title">
                 <h3 class="our-stories">Our Stories</h3>
@@ -139,7 +142,7 @@
 
 
     </main>
-    <footer class="footer">
+    <footer class="footer hide">
         <section class="footer-section">
 
             <div class="ff-section-container">
