made responsive the footer section and tried some responsive at the nav bar

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <nav class="navbar hide">
+        <nav class="navbar">
             <div class="logo-site-name">
                 <img class="site-logo" src="assets/logo.png" alt="">
                 <h2 class="site-title">SCHOOL</h2>
@@ -79,7 +79,7 @@
             </div>
         </section>
 
-        
+
         <section class="our-story-section">
             <div class="our-story-title">
                 <h3 class="our-stories">Our Stories</h3>
@@ -142,7 +142,7 @@
 
 
     </main>
-    <footer class="footer hide">
+    <footer class="footer">
         <section class="footer-section">
 
             <div class="ff-section-container">
