--- a/index.html
+++ b/index.html
@@ -78,6 +78,10 @@
                     </div>
                 </div>
             </div>
+            <div class="card-buttons-container">
+                <button class="card-button1"><i class="fa-solid fa-chevron-left fa-2xl" style="color: #ffffff;"></i></button>
+                <button class="card-button2"><i class="fa-solid fa-chevron-right fa-2xl" style="color: #ffffff;"></i></button>
+            </div>
         </section>
 
 
