changed the lorem ipsum text

--- a/index.html
+++ b/index.html
@@ -55,25 +55,19 @@
                     <div class="sc-card sc-card1">
                         <img class="sc-card-image" src="assets/kinder.png" alt="">
                         <h3 class="sc-card-title">Kinder (3-6) Years</h3>
-                        <p class="sc-card-description">Cum sociis natoque penatibus et magnis
-                            dis parturient montes, nascetur ridiculus
-                            mu sdis parturient</p>
+                        <p class="sc-card-description">Join us in laying a strong foundation for your child’s well growth and future!</p>
                         <p class="remo-btn"><a href="">Read More</a></p>
                     </div>
                     <div class="sc-card sc-card2">
                         <img class="sc-card-image" src="assets/elementary.png" alt="">
                         <h3 class="sc-card-title">Elementary School</h3>
-                        <p class="sc-card-description">Cum sociis natoque penatibus et magnis
-                            dis parturient montes, nascetur ridiculus
-                            mu sdis parturient</p>
+                        <p class="sc-card-description">Join us in laying a strong foundation for your child’s well growth and future!</p>
                         <p class="remo-btn"><a href="">Read More</a></p>
                     </div>
                     <div class="sc-card sc-card3">
                         <img class="sc-card-image" src="assets/middle.png" alt="">
                         <h3 class="sc-card-title">Middle (10-16) Years</h3>
-                        <p class="sc-card-description">Cum sociis natoque penatibus et magnis
-                            dis parturient montes, nascetur ridiculus
-                            mu sdis parturient</p>
+                        <p class="sc-card-description">Join us in laying a strong foundation for your child’s well growth and future!</p>
                         <p class="remo-btn"><a href="">Read More</a></p>
                     </div>
                 </div>
@@ -156,7 +150,7 @@
                     <h2>Kids Education</h2>
                 </div>
                 <div class="ff-section-description">
-                    <p>Pizza ipsum dolor meat lovers buffalo. Deep dolor roll melted bacon Bianca pan bacon pineapple Aussie. Mayo rib sauce Hawaiian meatball.</p>
+                    <p>Our school has four campuses with around 25,000 students. The main campus is located in Baily Road. The others are in Bashundhara, Azimpur, Dhanmondi.</p>
                 </div>
             </div>
 
