added the marquee tag

--- a/index.html
+++ b/index.html
@@ -30,6 +30,14 @@
             </div>
         </nav>
 
+        
+        <section class="marquee-tag-section">
+            <marquee class="marquee-tag" loop="-1" scrollamount="5">
+                Admission is open at "Kids Education" school. Contact at 01712345678. Admission is open at "Kids Education" school. Contact at 01712345678. Admission is open at "Kids Education" school. Contact at 01712345678. Admission is open at "Kids Education" school. Contact at 01712345678. Admission is open at "Kids Education" school. Contact at 01712345678. Admission is open at "Kids Education" school. Contact at 01712345678.
+              </marquee>
+        </section>
+
+
         <section class="empowering-section">
             <div class="empowering-container">
                 <div class="empowering-content">
@@ -110,7 +118,7 @@
                             <div class="card-image">
                                 <img src="assets/story-3.png" alt="">
                             </div>
-                            <p class="date-time">November 19, 2019</p>
+                            <p class="date-time2">November 19, 2019</p>
                             <h5 class="card-title">Summer math & literacy centres for kids</h5>
                         </div>
         
